static/css/style.css
/* ... */
p {
    font-size: clamp(0.85rem, 1.5vw + 0.7rem, 1.2rem); /* мінімум 1rem (16px), до максимуму 1.2rem (19.2px) */
    line-height: 1.6; /* додатковий міжрядковий інтервал для поліпшення читабельності */
    margin-bottom: 1.5rem; /* відступ між параграфами */
    color: #333; /* помірний темний колір для кращої читабельності */
}

a {
    color: inherit;
    text-decoration: none;
}



.container_index{
    position: relative;
}

.index_header_menu{
    max-width: 1340px;
    margin: 0 auto;
    left: 0;
    right: 0;
    row-gap: 5rem;
    position: absolute;
    z-index: 2;
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    align-content: stretch


}

#carousel_background{
    height: 50rem;

}


:root {
    --font-weight-normal: 400;
    --font-weight-bold: 700;
    --font-weight-heavy: 900;

}

.nunito-sans-normal {
    font-family: 'Nunito Sans', sans-serif;
    font-weight: var(--font-weight-normal);
}

.nunito-sans-bold {
    font-family: 'Nunito Sans', sans-serif;
    font-weight: var(--font-weight-bold);
}

.nunito-sans-heavy {
    font-family: 'Nunito Sans', sans-serif;
    font-weight: var(--font-weight-bold);
}

.nunito-sans-<uniquifier> {
  font-family: "Nunito Sans", sans-serif;
  font-optical-sizing: auto;
  font-weight: <weight>;
  font-style: normal;
  font-variation-settings:
    "wdth" 100,
    "YTLC" 500;
}

body {
    font-family: 'Nunito Sans', sans-serif;
    font-weight: 400;
    margin: 0 auto;
    padding: 0;
    background-color: #f8f9fa;
    scroll-behavior: smooth;
}
/* Navbar links styles */
.d-flex.flex-column.flex-md-row.align-items-center.pb-2.mb-2.border-bottom {
    height: 60px; /* Adjust the height as needed */
}

/* Navbar index links styles */
.d-flex.flex-column.flex-md-row.align-items-center.pb-2.mb-2{
    height: 59px; /* Adjust the height as needed */
}

nav a {
    position: relative;
    text-decoration: none;
    color: inherit;
    border-bottom: 3px solid transparent; /* Initial border color */
    transition: border-bottom-color 0.3s ease, color 0.3s, background-color 0.3s; /* Add smooth transition effects */
}

/* Border-bottom-color on hover */
nav a:hover {
    border-bottom-color: #3d4543; /* Gray line on hover */
    color: #3d4543; /* Text color on hover */
}

/* Border-bottom-color for the active link */
nav a:active,
nav a.active {
    border-bottom-color: #fbb933; /* yellow line for the active link */
}

/* Container-color styles */
.container-color {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
    border-width: 1px;
    border-color: #3d4543;
    border-style: solid;
    border-radius: 4px;
}

.container-bottom-corusel {
    display: flex;
    justify-content: center;
    align-items: center;
    border-width: 1px;
    border-radius: 4px;
    border-color: #f8f9fa;
    border-style: solid;
    color: #f8f9fa
}

.container-bottom-corusel:hover {
    background-color: #f8f9fa;
    color: #3d4543;

}

#index-nav a {
    color: #f8f9fa !important; /* Set the text color to white */
}

/* Add this rule to adjust text color on hover for the navbar */
#index-nav a:hover {
    color: white !important; /* Text color on hover */
    border-bottom-color: #fbb933; /* Gray line on hover */

}

/* Add this rule to adjust text color for the active link in the navbar */
#index-nav a:active,
#index-nav a.active {
    border-bottom-color: #fbb933 !important; /* yellow text color for the active link */
}


/* Contact link styles */
.contact-link {
    text-decoration: none;
    display: flex;
    padding: 10px 1rem;
    color: var(--fb-logo-text-color);
    border: solid 1px var(--fb-logo-text-color);
    margin: 5px 8px 5px 10px;
    transition: background 0.15s, color 0.15s, border 0.15s;
    line-height: 35px;
}

/* Hover effect for the contact link */
.contact-link:hover {
    color: var(--fb-color-1);
    background: var(--fb-logo-text-color);
}

/* Hover effect for the container-color */
.container-color:hover {
    background-color: #3d4543;
    color: #f8f9fa;
    border-radius: 4px;


}


/* Hero Section Content for index.html */
.full-screen-container {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    justify-content: flex-start;
}

/* Container-color styles for index page*/
.container-color-index {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
    border-width: 1px;
    border-color: #f8f9fa;
    border-style: solid;
    color: #f8f9fa;
    border-radius: 4px;
}

.container-color-index:hover {
    background-color: #f8f9fa;
    color: #3d4543;
    border-radius: 4px;

}

.blur_container_filter_wrapper {
    position: relative;
    background: rgb(255 255 255 / 0%); /* Полупрозрачный фон */
    backdrop-filter: blur(50px); /* Размытие фона за элементом */
    border-radius: 0 0 22px 22px;
    z-index: 1;
    margin: auto;
    margin-top: 10rem;
    max-width: 1020px;
    z-index: 1;
}



.carousel-container {
    position: relative;
}

.carousel-inner {
    width: 100%;
    height: 100%;
}

.carousel-item {
    width: 100%;
    height: 100%;
    position: relative;
    overflow: hidden;
}

.carousel-item img {
    width: 100%;
    height: 100%; /* Или задайте фиксированную высоту, если нужно */
    object-fit: cover; /* Изображение обрезается, чтобы заполнить блок */
}

.carousel-caption {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: white;
    text-align: center;
}

.content {
    color: #3d4543;
    font-size: 24px;
}

.middle-block {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 80px;
}

.main-middle-block{
    display: flex;
    justify-content: center;
    align-items: flex-end;
}


.main-text-carousel {
    width: 400px;
    height: 128px;
    margin-top: 0;
    margin-bottom: 0.5rem;
    font-weight: 500;
    line-height: 1.2;
    color: #f8f9fa;
}
/* ... */

